<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PYTR</string>
    <string name="setup_title">Connect to PYTR Server</string>
    <string name="searching">Searching for servers on your network\u2026</string>
    <string name="no_servers">No servers found</string>
    <string name="manual_entry">Or enter server address manually:</string>
    <string name="hint_address">e.g. 192.168.1.100:8000</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting\u2026</string>
    <string name="connection_failed">Could not connect to server</string>
    <string name="retry">Retry</string>
</resources>
